--- a/aesy-portifolio/index.html
+++ b/aesy-portifolio/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <header>
+        <div class="logo"></div>
+        <ul>
+            <li>home</li>
+            <li>projetos</li>
+            <li>sobre nos</li>
+            <li>contato</li>
+        </ul>
+    </header>
     <h1 id="Quem foram os templários?"style="font-family:verdana;">Quem foram os templários?</h1>
     <picture>
     <source media="(max-width: 1000px)" srcset="imagens/f999c837315a4636862cf3db51edd876">
