--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@ Além de conferir aqui a história dos Cavaleiros Templários, não deixe de ass
         .</p>
     <h3>Cerco de Jerusalém</h3>
     <p>Se você quiser saber sobre o cerco de Jerusalém, clique aqui<a href="pag002.html">Cerco de Jerusalém</a></p>
-   
+    
+   <form>
+    <input type="radio" id="0-3"
+    name="nota" value="0-3">
+    <label for="0-3">0-3</label>
+    <br>
+    <input type="radio" id="4-7"
+    name="nota" value="4-7">
+    <label for="4-7">4-7</label>
+    <br>
+    <input type="radio" id="7-10"
+    name="nota" value="7-10">
+    <label for="7-10">7-10</label>
+   </form>
+    
 </body>
 </html>
